--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,10 @@
+/* Universal styles */
+
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
