--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,42 +1,41 @@
 /* Home styles */
-.trend-container {
-    position: relative;
-    width: 100vw;
-    height: calc(100vh - 235px);
+
+main {
+    background-color: rgba(165, 161, 171, .7);
 }
 
-.background-image {
-    height: 100%;
-    overflow: hidden;
-}
-
-.background-image img {
-    height: 100%;
-}
-
-.poster-trend {
+.container {
     width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(45,63,83, .85);
-    z-index: 1000;
+    height: 50%;
+    padding-bottom: 10px;
+}
+
+.poster img {
+    border-radius: 3px;
+}
+
+.container .title{
+    height: 10%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    padding-top: 10px;
+}
+
+.title h3 {
+    margin: 0;
+    padding: 10px;
 }
 
 @media (min-width: 768px) {
-    .trend-container {
-        height: calc(100vh - 74px);
-    }    
+    .container {
+        padding-right: 5%;
+        padding-left: 5%;
+    }
 }
 
 @media (min-width: 1236px) {
-    .background-image {
-        width: 100% !important;
-    }    
-    
-    .background-image img{
+    .background-image img {
         width: 100%;
-        height: auto;
-    } 
+    }
 }
