--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,7 @@
 }
 
 body {
+  background-color: rgba(165, 161, 171, .7);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
