--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -3,11 +3,6 @@
     height: 244px;
 }
 
-.pagination-container {
-    background-color: rgba(165, 161, 171, .7);
-    padding: 10px 0;
-}
-
 .page-container {
     display: flex;
     flex-direction: row; 
@@ -29,10 +24,8 @@
 }
 
 .poster img {
-    display: block;
-    margin: 0 auto;
+    width: unset;
 }
-
 
 .page-btns {
     width: 100%;
@@ -42,6 +35,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 10px;
 }
 
 .btn-bar button {
