--- a/src/css/info.css
+++ b/src/css/info.css
@@ -29,3 +29,30 @@
     border-radius: 2px;
     padding: 8px;
 }
+
+.rating-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin: 0 auto;
+}
+
+.rating-container p {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 25px;
+    width: 40%;
+    background-color: #94949c;
+    border: 1px solid #404042;
+}
+
+.rating-container button {
+    background-color: #404042;
+    height: 25px;
+    width: 30%;
+    cursor: pointer;
+    display: block;
+    border: none;
+}
