--- a/src/css/authenticated.css
+++ b/src/css/authenticated.css
@@ -1,8 +1,8 @@
 
 .authlist-container {
     display: flex;
+    flex-direction: column;
     background-color: #e1e1e8;
-    height: 100px;
 }
 
 .boxes {
@@ -21,6 +21,7 @@
 .boxes h3 {
     display: inline;
     margin-left: 10px;
+    width: 50%;
 }
 
 #create {
@@ -66,4 +67,11 @@
 .list-overlay button {
     width: 30%;
     cursor: pointer;
+}
+
+@media (min-width: 768px) {
+    .authlist-container {
+        height: 100px;
+        flex-direction: row;
+    }
 }
