--- a/src/css/header.css
+++ b/src/css/header.css
@@ -6,7 +6,7 @@
 
 .login-container {
     background: #404042;
-    height: 259px;
+    height: 239px;
 }
 
 .background-image {
@@ -17,6 +17,7 @@
 
 .background-image img {
     height: 100%;
+    min-width: 100%;
 }
 
 .welcome {
@@ -25,6 +26,7 @@
 }
 
 .info-overlay {
+    display: none;
     position: absolute;
     bottom: 6%;
     left: 6%;
@@ -228,6 +230,7 @@ nav ul a:hover,
     }    
 
     .info-overlay {
+        display: initial;
         bottom: 10%;
         max-width: 50%;
     }
