--- a/src/css/home.css
+++ b/src/css/home.css
@@ -5,6 +5,11 @@
     background-color: rgba(165, 161, 171, .7);
 }
 
+.main-container .container {
+    width: 90% !important;
+    margin: 0 auto;
+}
+
 .container {
     width: 100%;
     padding-bottom: 10px;
