Updated the color shceme of website

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,7 +1,7 @@
 /* Footer Styles */
 footer {
     margin-top: auto;
-    background-color: #404042;
+    background-color: #478fbf;
     height: 10vh;
     display: flex;
     justify-content: center;
