--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,11 +1,12 @@
 /* Header styles */
 .header-container {
-    background: #404042;
+    background-color: #D44B2D;
     height: 50vh;
+    max-width: 100vw;
 }
 
 .login-container {
-    background: #404042;
+    background-color: #D44B2D;
     height: 239px;
 }
 
@@ -13,6 +14,7 @@
     position: relative;
     height: 100%;
     overflow: hidden;
+    width: 100%;
 }
 
 .background-image img {
@@ -31,7 +33,7 @@
     bottom: 6%;
     left: 6%;
     max-width: 80%;
-    color: rgb(230, 226, 235);
+    color: rgb(243, 204, 108);
     z-index: 1000;
 }
 
@@ -54,7 +56,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(230, 226, 235, .6);
+    background-color: rgba(212, 75, 45, .8);
     padding-top: 15px;
     display: flex;
     flex-direction: column;
@@ -85,7 +87,8 @@ header nav {
     align-items: center;
     width: 450px;
     z-index: 1200;
-    background-color: #c6c6cf;
+    color: #D44B2D;
+    background-color: #F3CC6C;
     padding: 20px;
     text-align: center;
     top: 254px;
@@ -113,13 +116,14 @@ header nav {
 .auth-overlay {
     display: none;
     position: absolute;
-    background-color: #c6c6cf;
+    background-color: #F3CC6C;
     top: 25px;
     left: 0;
     width: 100%;
 }
 
 .auth-overlay a {
+    color: #D44B2D;
     margin: 5px 0;
     cursor: pointer;
 }
@@ -141,7 +145,7 @@ nav ul a {
     display: block;
     text-decoration: none;
     width: 80vw;
-    color: #3c3840;
+    color: #F3CC6C;
     transition: color 1.5s;
 }
 
@@ -150,14 +154,10 @@ nav ul a {
 }
 
 nav ul a:hover,
-.login:hover {
-    color: #787064;
-    background-color: #c6c6cf;
-}
-
+.login:hover,
 .active {
-    color: #787064;
-    background-color: #c6c6cf;
+    color: #D44B2D;
+    background-color: #F3CC6C;
 }
 
 .search {
@@ -169,7 +169,8 @@ nav ul a:hover,
 }
 
 .search input {
-    background-color: #c6c6cf;
+    background-color: rgba(243, 204, 108, .9);
+    color: #D44B2D;
     width: 50vw;
     border: none;
     padding: 7px;
@@ -178,7 +179,6 @@ nav ul a:hover,
 }
 
 .login {
-    color: #3c3840;
     text-decoration: none;
     height: 100%; 
     width: 100%;
@@ -186,11 +186,13 @@ nav ul a:hover,
 }
 
 .login a {
+    color: #D44B2D;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 10px;
     height: 100%;
+    transition: color 1.5s;
 }
 
 
