--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,5 +1,6 @@
 .login-form {
    position: relative;
+   background-color: #F3CC6C;
    height: calc(100vh - (221px + 10vh)); 
 }
 
@@ -9,6 +10,8 @@
     border-radius: 3px;
     padding: 5px;
     margin-bottom: 5px;
+    background-color: rgba(243, 204, 108, .9) !important;
+    color: #D44B2D !important;
 }
 
 .login-form form button {
@@ -19,11 +22,13 @@
     margin-right: 10px;
     margin-bottom: 5px;
     cursor: pointer;
+    background-color: rgba(243, 204, 108, .9);
 }
 
 .login-form h1{
     margin: 0;
     padding: 10px;
+    color: #F3CC6C;
 }
 
 .login-overlay {
@@ -34,12 +39,12 @@
     top: calc(50% - (40vh/2));
     border: none;
     border-radius: 5px;
-    background-color: #c6c6cf;
+    background-color: rgba(212, 75, 45);
     padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 5px 10px rgba(64, 64, 66, .6);
+    box-shadow: 5px 10px #478fbf;
 }
 
 @media (min-width: 768px) {
