Updated svg icons to match coloor scheme

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -186,7 +186,7 @@ nav ul a:hover,
 }
 
 .login a {
-    color: #D44B2D;
+    color: #F3CC6C;
     display: flex;
     align-items: center;
     justify-content: center;
