--- a/src/css/info.css
+++ b/src/css/info.css
@@ -71,12 +71,14 @@
 }
 
 .addlist {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #94949c;
     width: 50px;
     height: 50px;
     margin: 2px;
     margin: 0 auto;
-    text-align: center;
     border: 1px solid #040408;
     padding: 10px;
     border-radius: 50%;
