Added list features
-add movie to list
-remove move to list
- css and layout
- ternary expressions to change on conditions

--- a/src/css/info.css
+++ b/src/css/info.css
@@ -105,11 +105,18 @@
 
 .ls-overlay li {
     list-style-type: none;
-    display: block;
     padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .ls-overlay li:hover {
     width: 100%;
     background-color: #d4d4dc;
 }
+
+.ls-overlay li .icon {
+    width: 20px;
+}
+
