--- a/src/css/authenticated.css
+++ b/src/css/authenticated.css
@@ -1,13 +1,17 @@
 
 .authlist-container {
+    background-color: rgba(243, 204, 108, .7) !important;
     display: flex;
     flex-direction: column;
     background-color: #e1e1e8;
 }
 
 .boxes {
+    color: rgb(243, 204, 108);
+    margin: 5px;
+    background-color: rgba(212, 75, 45, .8);
     flex-basis: 25%;
-    border: 1px solid #404042;
+    border: 1px solid rgb(212, 75, 45);
     padding: 10px;
     display: flex;
     justify-content: center;
@@ -25,18 +29,22 @@
 }
 
 #create {
+    color: rgb(212, 75, 45);
+    background-color: rgba(243, 204, 108, .7) !important;
     width: 60px;
     height: 60px;
-    border: 1px solid #404042;
+    border: 1px solid rgb(212, 75, 45);
     border-radius: 50%;
     cursor: pointer;
     background-color: transparent;
 }
 
 .quantity {
+    color: rgb(212, 75, 45);
+    background-color: rgba(243, 204, 108, .7);
     width: 60px;
     height: 60px;
-    border: 1px solid #404042;
+    border: 1px solid rgb(212, 75, 45);
     border-radius: 50%;
     display: flex;
     align-items: center;
