--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -33,6 +33,10 @@ footer {
     align-items: center;
 }
 
+.tmdb a{
+    margin-left: 20px;
+}
+
 .tmdb img {
     margin-left: 20px;
     height: 100%;
