--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,7 +7,7 @@
 
 .login-container {
     background-color: #D44B2D;
-    height: 239px;
+    height: 259px;
 }
 
 .background-image {
@@ -85,14 +85,18 @@ header nav {
     flex-wrap: wrap;
     position: absolute;
     align-items: center;
-    width: 450px;
+    width: 80vw;
     z-index: 1200;
     color: #D44B2D;
     background-color: #F3CC6C;
     padding: 20px;
     text-align: center;
-    top: 254px;
-    left: calc(50% - (450px/2));
+    top: 146px;
+    left: calc(50% - 80vw/2);
+}
+
+#movie {
+    top: 123px;
 }
 
 .genreContainer a {
@@ -100,7 +104,7 @@ header nav {
     margin-bottom: 5px;
     padding-right: 5px;
     min-height: 35px;
-    width: 25%;
+    width: 50%;
 }
 
 .auth-container {
@@ -197,6 +201,19 @@ nav ul a:hover,
 
 
 @media (min-width: 768px) {
+
+    .genreContainer {
+        width: 450px;
+        left: calc(50% - (450px/2));
+    }
+
+    #movie {
+        top: 54px;
+    }
+
+    .genreContainer a {
+        width: 25%;
+    }
 
     header {
         padding-right: 5%;
