--- a/src/css/info.css
+++ b/src/css/info.css
@@ -1,14 +1,20 @@
 
-.info-wrapper {
-    background-color: #A7CB92;
-}
-
 .info-container {
+    background-color: rgb(243, 204, 108);
     display: none;
     position: relative;
     width: 40vw;
-    height: 100%;
+    min-height: 100vh;
     flex-direction: column;
+}
+
+.info-card {
+    color: rgba(243, 204, 108, .8);
+    background-color: rgba(212, 75, 45, .8);
+    padding: 10px;
+    margin: 10px;
+    margin-top: 20px;
+    border: 2px solid rgb(212, 75, 45);
 }
 
 .info-container h2,
@@ -26,9 +32,12 @@
 }
 
 .info-container .exit {
+    border: 2px solid rgb(212, 75, 45);
+    color: rgb(212, 75, 45);
+    background-color: rgb(243, 204, 108);
     position: absolute;
-    top: 5px;
-    right: 5px;
+    top: 25px;
+    right: 15px;
     border: none;
     border-radius: 2px;
     padding: 8px;
