--- a/src/css/info.css
+++ b/src/css/info.css
@@ -1,16 +1,20 @@
 
 .info-container {
-    background-color: rgb(243, 204, 108);
+    position: relative;
     display: none;
     position: relative;
-    width: 40vw;
-    min-height: 100vh;
+    width: 50vw;
     flex-direction: column;
+}
+
+.info-container.overlay{
+    position: absolute;
+    z-index: 3000;
 }
 
 .info-card {
     color: rgba(243, 204, 108, .8);
-    background-color: rgba(212, 75, 45, .8);
+    background-color: rgb(212, 75, 45);
     padding: 10px;
     margin: 10px;
     margin-top: 20px;
