created store function for search and axios get request
- set up functions to get the data from dtabase
-store action to store the search

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -189,6 +189,7 @@ nav ul a:hover,
 }
 
 .search-btn {
+    cursor: pointer;
     width: 25px;
     border-radius: 3px;
     border-top-left-radius: 0;
